tests/baselines/reference/thisInModule.errors.txt
thisInModule.ts(3,5): error TS2331: 'this' cannot be referenced in a module or namespace body.
thisInModule.ts(3,5): error TS2683: 'this' implicitly has type 'any' because it does not have a type annotation.


==== thisInModule.ts (2 errors) ====
    namespace myMod {
        var x;
        this.x = 5;
        ~~~~
!!! error TS2331: 'this' cannot be referenced in a module or namespace body.
        ~~~~
!!! error TS2683: 'this' implicitly has type 'any' because it does not have a type annotation.
    }